; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_trace.c_trace_ctrl.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_trace.c_trace_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_data_st = type { i32, i32, i32 (i8*, i32, i32, i32, i32)* }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32, i64, i8*)* @trace_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @trace_ctrl(i32* %0, i32 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.trace_data_st*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call %struct.trace_data_st* @BIO_get_data(i32* %11)
  store %struct.trace_data_st* %12, %struct.trace_data_st** %10, align 8
  %13 = load i32, i32* %7, align 4
  switch i32 %13, label %26 [
    i32 129, label %14
    i32 128, label %14
  ]

14:                                               ; preds = %4, %4
  %15 = load %struct.trace_data_st*, %struct.trace_data_st** %10, align 8
  %16 = getelementptr inbounds %struct.trace_data_st, %struct.trace_data_st* %15, i32 0, i32 2
  %17 = load i32 (i8*, i32, i32, i32, i32)*, i32 (i8*, i32, i32, i32, i32)** %16, align 8
  %18 = load %struct.trace_data_st*, %struct.trace_data_st** %10, align 8
  %19 = getelementptr inbounds %struct.trace_data_st, %struct.trace_data_st* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load %struct.trace_data_st*, %struct.trace_data_st** %10, align 8
  %23 = getelementptr inbounds %struct.trace_data_st, %struct.trace_data_st* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = call i32 %17(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0, i32 %20, i32 %21, i32 %24)
  store i64 1, i64* %5, align 8
  br label %28

26:                                               ; preds = %4
  br label %27

27:                                               ; preds = %26
  store i64 -2, i64* %5, align 8
  br label %28

28:                                               ; preds = %27, %14
  %29 = load i64, i64* %5, align 8
  ret i64 %29
}

declare dso_local %struct.trace_data_st* @BIO_get_data(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
